ops/k8s/deployment_sidekiq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-blog-sidekiq
spec:
  selector:
    matchLabels:
      app: simple-blog
  replicas: 2
  template:
    metadata:
      labels:
        app: simple-blog
    spec:
      containers:
        - name: rails-sidekiq
          image: kinlong/simple_blog_rails:20210611-master-bca16ef
          command: ["bundle", "exec", "sidekiq"]
          imagePullPolicy: IfNotPresent
