ops/k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: simple-blog-service

spec:
  selector:
    app: simple-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
